--- a/munye/js/article.html
+++ b/munye/js/article.html
@@ -53,17 +53,31 @@
       </div>
       <div class="blog-final-line"></div>
       <a href="" class="like" ><i class="fab fa-likes"></i></a>
-      <div class="blog-comment">
-        <div class="comments-title">
-          <h3 class="guest-comment">Comments</h3>
-          <!-- <div class="subscribe">
-            subscribe
-          </div> -->
+      <form>
+        <div class="blog-comment">
+          <div class="name-title">
+            <h3 class="guest-name">Name</h3>
+            <!-- <div class="subscribe">
+              subscribe
+            </div> -->
+          </div>
+          <div class="name-input">
+            <input name="comment" id="name"type="text"/>
+            <span class="name error-message"></span>
+          </div>
+          <div class="comments-title">
+            <h3 class="guest-comment">Comments</h3>
+            <!-- <div class="subscribe">
+              subscribe
+            </div> -->
+          </div>
+          <div class="comments-input">
+            <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+            <span class="comment error-message"></span>
+            <div class="comment-btn">SEND</div>
+          </div>
         </div>
-        <div class="comments-input">
-          <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
-          <div class="comment-btn">SEND</div>
-        </div>
+      </form>
         <div class="comments-container">
           <div class="comment-guest">
           <div class="guest-profile">
@@ -98,6 +112,7 @@
   </div>
   <script src="./auth.js"></script>
   <script src="./blog.js"></script>
+  <script src="./comment.js"></script>
   <script>
     const blogId = location.href.split('?id=')[1];
     const blogs = JSON.parse(localStorage.getItem('blogList'));
