--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
     <!-- footer start  -->
     <script src="./main.js"></script>
-    <script src="/js/geolocationapi.js"></script>
+    <script src="./munye/js/geolocationapi.js"></script>
+    
 </body>
 </html>
