--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
     </div>
 
 <div class="form-container sign-in-container">
-        <form> 
+        <form class="signform"> 
             <h2>LOG IN</h2>
             <div class="social-container">
                 <a href="#" class="social"><i class="fab fa-facebook"></i></a>
@@ -73,6 +73,7 @@
 
 </div>
 <script src="main.js"></script>
-<script src="./js/loginformValidation.js"> </script>
+<script src="./munye/js/loginformValidation.js"> </script>
+
 </body>
 </html>
