--- a/munye/js/admin.html
+++ b/munye/js/admin.html
@@ -10,15 +10,10 @@
     />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-  <link rel="stylesheet" href="/munye/js/styles/admin.css"/>
-  <!-- <link rel="stylesheet" href="/css/admin.css"/> -->
-
-  <link rel="stylesheet" href="/munye/js/styles/mobileview.css"/>
-
+  <link rel="stylesheet" href="./styles/admin.css"/>
+  <link rel="stylesheet" href="./styles/mobileview.css"/>
   <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
  
-  
-<!-- <script>tinymce.init({selector:'textarea'});</script> -->
 
   <title>Admin</title>
 </head>
@@ -180,20 +175,7 @@
         </section>
       </content>
 
-      <!-- skills model -->
-
-      <!-- <div class="model" id="my-add-model">
-        <div class="model-content-skills">
-          <span class="close">&times;</span>
-          <div class="create-skill-title">
-            <p class="skills-header">Add Skill</p>
-            <div class="skills-underline"></div>
-          </div>
-          
-          </div>
-          
-        </div>
-      </div> -->
+  
       <div class="model" id="my-update-model">
         <div class="model-content-skills">
           <span class="close">&times;</span>
@@ -232,7 +214,7 @@
   </div>
 
   <!-- scripts -->
-  <script src="/munye/js/model.js"></script>
+  <script src="/munye/model.js"></script>
   <script src="/munye/js/skillsModel.js"></script>
   <script src="/munye/js/adminHambuger.js"></script>
   <script src="/munye/js/blogs.js"></script>
